--- a/certificados/src/index.css
+++ b/certificados/src/index.css
@@ -21,6 +21,10 @@ a {
 a:hover {
   color: #535bf2;
 }
+input::placeholder {
+  font-family:  Avenir, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+}
 
 body {
   margin: 0;
