--- a/certificados/src/index.css
+++ b/certificados/src/index.css
@@ -1,3 +1,7 @@
+*{
+  box-sizing: border-box;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -12,7 +16,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -24,14 +27,6 @@ a:hover {
 input::placeholder {
   font-family:  Avenir, Helvetica, Arial, sans-serif;
   font-size: 14px;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
