--- a/certificados/src/index.css
+++ b/certificados/src/index.css
@@ -2,30 +2,52 @@
   padding: 0;
   margin: 0;
 }
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --header-bg: rgb(43, 43, 57);
+  --text-color: rgb(95, 110, 146);
+  --body-bg: #1c1c28;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body.light {
+  --header-bg: #f3f3f3;
+  --text-color: #1e1e1e;
+  --body-bg: #d8d8db;
+}
+
+body.dark {
+  --header-bg: rgb(43, 43, 57);
+  --text-color: #ffffff;
+  --body-bg: #1c1c28;
+}
+
+body {
+  background-color: var(--body-bg);
+  color: var(--text-color);
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
+
 input::placeholder {
-  font-family:  Avenir, Helvetica, Arial, sans-serif;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
   font-size: 14px;
 }
 
@@ -33,6 +55,7 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+
 h2 {
   font-size: 1.6em;
   line-height: 1.1;
@@ -47,25 +70,20 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
+  color: var(--text-color);
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+/* background-color: #f9f9f9; 
   a:hover {
     color: #747bff;
   }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+*/
