--- a/certificados/src/components/MainPage/MainCards/maincards.module.css
+++ b/certificados/src/components/MainPage/MainCards/maincards.module.css
@@ -10,6 +10,7 @@
   justify-content: center;
   text-align: center;
   box-sizing: border-box;
+  border-radius: 10px;
 
   background-color: var(--header-bg);
   color: var(--text-color);
