--- a/certificados/src/index.css
+++ b/certificados/src/index.css
@@ -34,6 +34,7 @@ body {
   background-color: var(--body-bg);
   color: var(--text-color);
   transition: background-color 0.3s ease, color 0.3s ease;
+  height: 100%;
 }
 
 
