--- a/certificados/src/pages/Login/login.css
+++ b/certificados/src/pages/Login/login.css
@@ -1,3 +1,9 @@
+.login{
+    padding: 5rem;
+    border: 2px solid #646cff;
+    border-radius: 5px;
+}
+
 .Login {
     display: flex;
     flex-direction: column;
@@ -5,6 +11,7 @@
     align-items: center;
 
     height: 100vh;
+    color: var(--text-color);
 }
 .login-container{
     width: 400px;
