--- a/certificados/src/components/HomeCertificados/homecertificados.css
+++ b/certificados/src/components/HomeCertificados/homecertificados.css
@@ -1,4 +1,4 @@
-.HomeCertificados {
+.HomeCards {
     width: 100%;
     height: 100%;
 
@@ -19,4 +19,31 @@
     width: 55%;
     display: flex;
     flex-direction: column;
+}
+
+.li-cards {
+    display: flex;
+    flex-direction: row;
+
+    gap: 30px;
+    list-style: none;
+
+    margin-top: 15px;
+
+}
+
+.curso-item{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--header-bg);
+    justify-content: space-around;
+    border-radius: 8px;
+    transition: border-color 0.25s;
+    border: 1px solid transparent;
+
+    width: 500px;
+    height: 500px;
+}
+.curso-item:hover{
+    border-color: #646cff
 }
